--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
             <ul class="options units">
               <button class="celcius active">°C</button>
               <button class="fahrenheit">°F</button>
+              <a href="https://prashant-desune.github.io/pk-portfolio.github.io/" target="_blank"><button class="ports"><img src="./images/main.jpeg"alt=""></button></a>
             </ul>
           </nav>
           <div class="cards" id="weather-cards"></div>
